pxc/tests/test_001_px/up6.px

namespace up6;
import common -;

function {t, f} void values_vector(vector{t} mutable& v)
{
  size_t sz = v.size();
  size_t i;
  for (i = 0; i < sz; ++i) {
    f(v[i]);
  }
}

function {t, f} void keys_vector(vector{t} mutable& v)
{
  uint sz = v.size();
  uint i;
  for (i = 0; i < sz; ++i) {
    f(i);
  }
}

function void foo(vector{int} mutable& v) {
  int x;
  function {t} void add(t y) { x += y; }
  values_vector{int, add}(v); // error
  println(x);
}

vector{int} a;
a.resize(101);
int i;
for (i = 0; i < a.size(); ++i) {
  a[i] = i;
}
foo(a);

